Ticket 851: Add log information for debug purpose as well as performance monitoring