@@ -62,7 +62,7 @@ public class TimeTest {
 
   @Test
   public void equals_otherType() {
-    assertFalse(classUnderTest.equals(new Double(1)));
+    assertFalse(classUnderTest.equals(Double.valueOf(1)));
   }
 
   @Test
